# cmake_min_consumer_lib

./: CMakeLists.txt  README.md
include/: minConsumerLib.h
src/: minConsumerLib.cpp  minConsumerLib.h
